# MLs_from_Whitechapell

./: .gitignore  DESIGN_REQUIREMENTS.md  README.md  board_map.py  cops_edges.eg  jack_edges.eg  pyproject.toml  read_svg.py  visualise_map.py
agents/: __init__.py  base.py  curriculum_director.py  heuristic_cops.py  random_agents.py
engine/: env.py  game.py  graph.py  graph_utils.py  metrics.py  state.py
frontend/: admin.js  api.js  board.js  index.html  replay.js
frontend_participant/: api.js  colors.css  game.html  game.js  index.html
maps/: course.json  course_1.json  course_2.json  course_3.json  course_participant.json  whitechapel.json
server/: admin_routes.py  course_queue.py  database.py  debug_main.py  main.py  replay.py  replay_routes.py  routes.py  session.py
tests/: conftest.py  test_env.py  test_game.py  test_graph.py  test_pmf.py
tools/: gen_replay.py  generate_maps.py  optuna_tune.py  pareto_compare.py  replay_to_test.py  run_and_save_replays.py  scripted_sim.py
training/: env.py  eval.py  model.py  obs.py  train.py
